[fix] fix my navbar and add the collapse in order to give more responsivity to my navbar

--- a/mon-portfolio/src/Components/Header.css
+++ b/mon-portfolio/src/Components/Header.css
@@ -25,13 +25,41 @@
     flex-wrap: wrap;
 } */  
  
+.bi {
+  background-color: white;
+  transition: 0.3s background-color;
+}
+
+.bi:hover {
+  background-color: black
+}
+
 .nav-link{
   color: black;
   transition: color 0.3s ease;
 }
 
-.nav-link:hover, i:hover{
-  color: #34b7a7;
+.nav-link {
+  color: #666777;
+  font-weight: 500;
+  position: relative;
+}
+
+.nav-link:hover {
+  color:#000;
+}
+.navbar-brand {
+  color:  #666777;
+  transition: 0.3s color;
+}
+
+/* .nav-link:before {
+  color: #009970;
+  visibility: hidden;
+} */
+
+.toggler-black .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='black' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 
 i {
