--- a/mon-portfolio/src/Components/Home.css
+++ b/mon-portfolio/src/Components/Home.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap");
-.home{
+/* .home{
     padding-top: 300px;
     padding-left: 90px;
     color: white;
@@ -10,18 +10,13 @@
 
 .presentation {
   display: flex;
-}
+} */
 
 img {
-position: absolute;
-right: 150px;
-top: 35%;
-width: 300px;
-height: 300px;
-border-radius: 50%;
+  background-size: cover;
 }
 
-
+/* 
 .typing {
     color: blue;
 }
@@ -64,23 +59,49 @@ border-radius: 50%;
     border-right: 0.15em solid white;
     animation: typing 5s steps(35, end) infinite, blink-caret 0.75s step-end infinite;
     width: 0;
-}
+} */
 
-.slider-container {
+/* .slider-container {
   width: 100%;
   height: 200px;
   overflow: hidden;
   position: relative;
-}
+} */
 
 .slider-image {
-  position: absolute;
-  right: -300px; /* Commence hors écran à droite */
-  animation: slideIn 2s forwards;
+  /* position: absolute;
+  right: -300px; Commence hors écran à droite */
+  /* animation: slideIn 2s forwards; */
 }
 
-@keyframes slideIn {
+.img:hover {
+  color: red;
+}
+
+.container {
+  position: absolute;
+  top: 30%;
+  left: 60%;
+}
+.animate-slide-down {
+  animation: slideDown 1.2s ease-out forwards;
+  opacity: 0; /* invisible avant l'animation */
+}
+
+@keyframes slideDown {
+  0% {
+    transform: translateY(-50px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+/* @keyframes slideIn {
   to {
     right: 0;
   }
-}
+} */
+
